<resources>
    <string name="app_name">torti-app</string>
    <string name="txtUsuario">Usuario</string>
    <string name="txtContraseña">Contraseña</string>
    <string name="btnIniciarSesion">Iniciar Sesión</string>
    <string name="label_history">Historial</string>
    <string name="label_delivery">Entregas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtMontoPagar">Monto a pagar</string>
    <string name="txtliquidar">Liquidar</string>
    <string name="txtAbonar">Abonar</string>
    <string name="txtcantidad">Cantidad</string>
    <string name="txtPagar">Total a pagar</string>
    <string name="txtProducto">Producto</string>
    <string name="label_sale">Ventas</string>
    <string name="label_map">Mapa</string>
    <string name="label_pending_payment">Pagos pendientes</string>
    <string name="label_confirm">Confirmar</string>
    <string name="label_payment_credit">¿Concretar pago a contado?</string>
    <string name="txtCancelar">Cancelar</string>
    <string name="txtDepositar">Depositar</string>
    <string name="txtTotalPagar">Total a pagar</string>
    <string name="txtPrecio">Precio</string>
    <string name="map_key">AIzaSyAdXdnGyvsXWdfwbkcABMl-3FEbceEN3y8</string>
</resources>
