<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNegroMate"
    android:padding="40dp"
    android:gravity="center"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo_tortilleria"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/txt_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtUsuario"
        android:text="repartidor"
        android:textColorHint="@android:color/white"
        android:textColor="@color/colorBlanco"
        android:backgroundTint="@android:color/white"
        android:drawableEnd="@drawable/ic_person_black_24dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/img_logo"/>

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="repartidor"
        android:hint="@string/txtContraseña"
        android:layout_centerVertical="true"
        android:textColorHint="@android:color/white"
        android:textColor="@color/colorBlanco"
        android:inputType="textPassword"
        android:backgroundTint="@android:color/white"
        android:layout_below="@id/txt_usuario"
        android:drawableEnd="@drawable/ic_https_black_24dp"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/btn_iniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_password"
        android:background="@drawable/rounded_button"
        android:text="@string/btnIniciarSesion"
        android:textColor="@color/colorBlanco" />

</RelativeLayout>