<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNegro"
    tools:context=".activities.PendingPaymentsActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorNegroMate">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pagos Pendientes"
            android:textColor="@color/colorBlanco"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/r1"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorNegroMate">

        <TextView
            android:id="@+id/txtProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtProducto"
            android:textColor="@color/colorBlanco"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtcantidad"
            android:textColor="@color/colorBlanco"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPagar"
            android:textColor="@color/colorBlanco"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_pendingpayments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/r1"/>

    <Button
        android:id="@+id/btn_pagar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Pagar"
        android:textColor="@color/colorBlanco"
        android:background="@drawable/rounded_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"/>

</RelativeLayout>